@@ -1,16 +1,16 @@
 {
-  "timestamp" : "2022-08-03T16:32:23Z",
+  "timestamp" : "2022-08-04T02:05:43Z",
   "count_outdated" : 706,
   "uniques_outdated" : 368,
-  "count" : 738,
-  "uniques" : 384,
+  "count" : 736,
+  "uniques" : 383,
   "clones" : [
     {
       "timestamp": "2022-07-21T00:00:00Z",
-      "count": 4,
+      "count": 2,
       "count_minmax": [ 2, 4 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ]
+      "uniques": 1,
+      "uniques_minmax": [ 1, 2 ]
     },
     {
       "timestamp": "2022-07-22T00:00:00Z",
