@@ -1,11 +1,11 @@
 {
-  "count": 32,
-  "uniques": 3,
+  "count": 30,
+  "uniques": 2,
   "clones": [
     {
       "timestamp": "2022-07-21T00:00:00Z",
-      "count": 4,
-      "uniques": 2
+      "count": 2,
+      "uniques": 1
     },
     {
       "timestamp": "2022-07-22T00:00:00Z",
