@@ -1,3 +1,10 @@
+2022-08-04T02:05:43Z:
+* notice: last 14d: unq all: 2 30
+* notice: prev accum: outdated-unq outdated-all / unq all: 368 706 / 384 738
+* notice: next accum: outdated-unq outdated-all / unq all: 368 706 / 383 736
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -1 -2 / +2 +4 -1 -2 / 1 2
+* notice: removed / changed dates: [] / [2022-07-21]
+
 2022-08-03T16:32:23Z:
 * notice: last 14d: unq all: 3 32
 * notice: prev accum: outdated-unq outdated-all / unq all: 366 703 / 383 736
